5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1716_2502.log
== SUBMITION (2019-05-16 13:38:38) 
-- CODE:
n = int(input("digite os valores de n:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12** (1/2) * (sinal*1)/a
	soma = soma + 1
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- EXECUTION TIME:
0.225722
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
11
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
15
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:38:40) 
-- CODE:
n = int(input("digite os valores de n:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12** (1/2) * (sinal*1)/a
	soma = soma + 1
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:39:05) 
-- CODE:
n = int(input("digite os valores de n:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12** (1/2) * (sinal*1)/a
	soma = soma + a
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- EXECUTION TIME:
0.179779
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
265719
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
21523359
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
9840
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:39:06) 
-- CODE:
n = int(input("digite os valores de n:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12** (1/2) * (sinal*1)/a
	soma = soma + a
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- EXECUTION TIME:
0.201409
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
265719
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
21523359
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
9840
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:39:06) 
-- CODE:
n = int(input("digite os valores de n:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12** (1/2) * (sinal*1)/a
	soma = soma + a
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- OUTPUT:
265719
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:39:21) 
-- CODE:
n = int(input("digite os valores de n:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12** (1/2) * (sinal*1)/a
	soma = soma + x
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- EXECUTION TIME:
0.172269
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
0.86603029
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
0.86602546
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
0.86589341
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:39:22) 
-- CODE:
n = int(input("digite os valores de n:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12** (1/2) * (sinal*1)/a
	soma = soma + x
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- EXECUTION TIME:
0.134626
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
0.86603029
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
0.86602546
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
0.86589341
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:39:23) 
-- CODE:
n = int(input("digite os valores de n:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12** (1/2) * (sinal*1)/a
	soma = soma + x
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- OUTPUT:
0.86603029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:40:24) 
-- CODE:
n = int(input("digite os valores de n:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12**(1/2) * (sinal*1)/a
	soma = soma + x
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- OUTPUT:
0.86603029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:40:34) 
-- CODE:
n = int(input("digite os valores de n:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12**(1/2) * (sinal*1)/a
	soma = soma + x
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- OUTPUT:
0.86603029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:41:09) 
-- CODE:
n = int(input("repeticao do termo:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12**(1/2) * (sinal*1)/a
	soma = soma + x
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- EXECUTION TIME:
0.150386
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
0.86603029
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
0.86602546
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
0.86589341
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:41:10) 
-- CODE:
n = int(input("repeticao do termo:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * 1) +1) * (3**exp)
	x = 12**(1/2) * (sinal*1)/a
	soma = soma + x
	i = i + 1
	sinal = sinal * (-1)
	exp = exp + 1
print(round(soma,8))	

-- OUTPUT:
0.86603029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:43:22) 
-- CODE:
n = int(input("repeticao do termo:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * i)+1) * (3**exp)
	x = 12**(1/2) * (sinal*1)/a
	soma = soma + x
	i = i + 1
	sinal = sinal *(-1)
	exp = exp + 1
print(round(soma,8))	

-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:43:25) 
-- CODE:
n = int(input("repeticao do termo:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * i)+1) * (3**exp)
	x = 12**(1/2) * (sinal*1)/a
	soma = soma + x
	i = i + 1
	sinal = sinal *(-1)
	exp = exp + 1
print(round(soma,8))	

-- EXECUTION TIME:
0.182958
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:59:53) 
-- CODE:
n = int(input("repeticao do termo:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * i)+1) * (3**exp)
	x = 12**(1/2) * (sinal*1)/a
	soma = soma + x
	i = i + 1
	sinal = sinal *(-1)
	exp = exp + 1
print(round(soma,8))	


π
=
√
12
(
1
1
×
3
0
−
1
3
×
3
1
+
1
5
×
3
2
−
1
7
×
3
3
+
.
.
.
)
π=12(11×30−13×31+15×32−17×33+...) 
-- EXECUTION TIME:
0.173294
-- ERROR:
  File "/home/codebench/codes/1716/2502/main.py", line 18
    =
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:50:51) 
-- CODE:
n = int(input("repeticao do termo:"))
soma = 0
i =  0 
exp = 0 
sinal = 1 

while (i < n):
	a = ((2 * i)+1) * (3**exp)
	x = 12**(1/2) * (sinal*1)/a
	soma = soma + x
	i = i + 1
	sinal = sinal *(-1)
	exp = exp + 1
print(round(soma,8))	



-- EXECUTION TIME:
0.147844
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
